tests/ui/variable_bits/variant_field_attributes.stderr
error: encountered unsupported #[bitfield] attribute
 --> tests/ui/variable_bits/variant_field_attributes.rs:4:12
  |
4 | #[bitfield(variable_bits = (32, 64))]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered unsupported #[bitfield] attribute
  --> tests/ui/variable_bits/variant_field_attributes.rs:11:12
   |
11 | #[bitfield(variable_bits = (32, 64))]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered unsupported #[bitfield] attribute
  --> tests/ui/variable_bits/variant_field_attributes.rs:18:12
   |
18 | #[bitfield(variable_bits = (32, 64))]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered unsupported #[bitfield] attribute
  --> tests/ui/variable_bits/variant_field_attributes.rs:29:12
   |
29 | #[bitfield(variable_bits = (32, 64))]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered invalid format for #[variant_discriminator] field attribute, expected #[variant_discriminator]
  --> tests/ui/variable_bits/variant_field_attributes.rs:42:5
   |
42 |     #[variant_discriminator = "value"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered invalid format for #[variant_data] field attribute, expected #[variant_data]
  --> tests/ui/variable_bits/variant_field_attributes.rs:51:5
   |
51 |     #[variant_data(param)]
   |     ^^^^^^^^^^^^^^^^^^^^^^
